added a test to ensure that error events are not indexed